Fixed spacing between last name input field and submit button

--- a/app/assets/stylesheets/components/homepage.scss
+++ b/app/assets/stylesheets/components/homepage.scss
@@ -29,6 +29,8 @@
 
   @media (max-width: 1160px) {
     padding-top: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
 
@@ -47,8 +49,6 @@
   @media (max-width: 1160px) {
     // padding: 0 5px;
     max-width: 75px;
-    padding-left: 12px;
-    padding-right: 12px;
   }
 }
 
@@ -150,6 +150,7 @@
 
   @media (max-width: 1160px) {
     width: 93%;
+    margin: 0;
     padding-left: 16px;
     padding-right: 16px;
   }
